--- a/concourse_test/ls_cmd.yml
+++ b/concourse_test/ls_cmd.yml
@@ -5,9 +5,6 @@ image_resource:
   type: docker-image
   source: {repository: busybox}
 
-inputs:
-- name: concourse_test
-
 run:
   path: ls
-  args: ['-alR']
+  args: ['-al']
