--- a/concourse_test/ls_cmd.yml
+++ b/concourse_test/ls_cmd.yml
@@ -5,6 +5,10 @@ image_resource:
   type: docker-image
   source: {repository: busybox}
 
+inputs:
+- name: .
+  
+
 run:
-  path: pwd
-  #args: ['-al']
+  path: ls
+  args: ['-al']
