--- a/concourse_test/ls_cmd.yml
+++ b/concourse_test/ls_cmd.yml
@@ -5,10 +5,9 @@ image_resource:
   type: docker-image
   source: {repository: busybox}
 
-inputs:
-- name: .
-  
-
 run:
   path: ls
   args: ['-al']
+run:
+  path: pwd
+  #args: ['-al']
